// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`excludes things when asked 1`] = `
Array [
  Object {
    "enums": Array [
      Object {
        "name": "source",
        "values": Array [
          "github",
          "bitbucket",
        ],
      },
    ],
    "flavor": "pg",
    "name": "public",
    "tables": Array [
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "id",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "created_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
        ],
        "name": "users",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "id",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "created_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "USER-DEFINED",
            "enumPath": "public.source",
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "source",
            "nullable": false,
            "type": "enum",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "uniqueIdentifier",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "enumPath": undefined,
            "foreignKeys": Array [
              Object {
                "column": "id",
                "schema": "public",
                "table": "users",
              },
            ],
            "hasDefault": false,
            "name": "userId",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "jsonb",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "rawUserData",
            "nullable": true,
            "type": "JSON",
            "uniqueConstraints": Array [],
          },
        ],
        "name": "userAccounts",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
      },
    ],
  },
]
`;

exports[`returns a schema in the right shape 1`] = `
Array [
  Object {
    "enums": Array [
      Object {
        "name": "source",
        "values": Array [
          "github",
          "bitbucket",
        ],
      },
    ],
    "flavor": "pg",
    "name": "public",
    "tables": Array [
      Object {
        "columns": Array [
          Object {
            "columnType": "integer",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "id",
            "nullable": false,
            "type": "number",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "character varying",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "name",
            "nullable": true,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "integer",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "batch",
            "nullable": true,
            "type": "number",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "migration_time",
            "nullable": true,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
        ],
        "name": "knex_migrations",
        "primaryKeyColumn": "id",
        "primaryKeyType": "number",
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "integer",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "index",
            "nullable": false,
            "type": "number",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "integer",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "is_locked",
            "nullable": true,
            "type": "number",
            "uniqueConstraints": Array [],
          },
        ],
        "name": "knex_migrations_lock",
        "primaryKeyColumn": "index",
        "primaryKeyType": "number",
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "id",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "created_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
        ],
        "name": "users",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "id",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "created_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "USER-DEFINED",
            "enumPath": "public.source",
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "source",
            "nullable": false,
            "type": "enum",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "uniqueIdentifier",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "enumPath": undefined,
            "foreignKeys": Array [
              Object {
                "column": "id",
                "schema": "public",
                "table": "users",
              },
            ],
            "hasDefault": false,
            "name": "userId",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "jsonb",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "rawUserData",
            "nullable": true,
            "type": "JSON",
            "uniqueConstraints": Array [],
          },
        ],
        "name": "userAccounts",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
      },
    ],
  },
]
`;
